syntax = "proto2";

package IM.Friend;
import "IM.BaseDefine.proto";
option java_package = "com.mogujie.tt.protobuf";
//option java_outer_classname = "MOGUJIEIMMessage";
option optimize_for = LITE_RUNTIME;


message IMGetUserInfoReq{
	required string nick_name = 1;
}

message IMMakeFriendReq{
	required uint32 user_account = 1;
	required string attach_msg = 2;
	required IM.BaseDefine.FriendPermission friend_permission = 3;
}